--- a/roles/k8s_node/defaults/main.yml
+++ b/roles/k8s_node/defaults/main.yml
@@ -49,8 +49,12 @@ k8s_node__kubelet_restart_sec: 10
 k8s_node__kube_proxy_bind_address: 127.0.0.1
 k8s_node__kube_proxy_enable_profiling: false
 k8s_node__kube_proxy_healthz_bind_address: 127.0.0.1:10256
+k8s_node__kube_proxy_ipvs_exclude_cidrs: []
+k8s_node__kube_proxy_ipvs_min_sync_period: 0s
+k8s_node__kube_proxy_ipvs_scheduler: rr
+k8s_node__kube_proxy_ipvs_sync_period: 30s
 k8s_node__kube_proxy_metrics_bind_address: 127.0.0.1:10249
-k8s_node__kube_proxy_mode: iptables
+k8s_node__kube_proxy_mode: ipvs
 k8s_node__kube_proxy_port_range: '0-0'
 k8s_node__kube_proxy_vlog_level: 2
 k8s_node__kube_proxy_restart_sec: 10
