--- a/roles/k8s_node/tasks/kube_proxy_started.yml
+++ b/roles/k8s_node/tasks/kube_proxy_started.yml
@@ -3,6 +3,12 @@
     name: conntrack-tools
     state: latest
 
+- name: ipset is installed
+  yum:
+    name: ipset
+    state: latest
+  when: k8s_node__kube_proxy_mode == 'ipvs'
+
 - name: kube-proxy lib dir exists
   file:
     path: /var/lib/kube-proxy
