Add support for cloud provider.

--- a/roles/k8s_master/defaults/main.yml
+++ b/roles/k8s_master/defaults/main.yml
@@ -4,6 +4,7 @@ k8s_master__kube_controller_manager_bin_checksum: sha1:cddddf92038341053a2ac84a7
 k8s_master__kube_scheduler_bin_checksum: sha1:2a7d78c8354a38add1971dca957d28945eab10d7
 k8s_master__kubectl_bin_checksum: sha1:5a336ea470a0053b1893fda89a538b6197566137
 k8s_master__kubeadm_bin_checksum: sha1:f127dccad906ee914af8b889bb60c07f402ed025
+k8s_master__cloud_controller_manager_bin_checksum: sha1:01af09fa4fe8407bf29eba9b32bd293d2434ce9d
 
 k8s_master__pki_dir: /etc/kubernetes/pki
 k8s_master__audit_log_dir: /var/log/kubernetes
@@ -41,6 +42,7 @@ k8s_master__kube_controller_manager_bind_address: 127.0.0.1
 k8s_master__kube_controller_manager_cluster_signing_duration: 8760h0m0s
 k8s_master__kube_controller_manager_controllers: '*,bootstrapsigner,tokencleaner'
 k8s_master__kube_controller_manager_enable_hostpath_provisioner: 'true'
+# k8s_master__kube_controller_manager_external_cloud_volume_plugin: azure
 k8s_master__kube_controller_manager_node_cidr_mask_size: 24
 k8s_master__kube_controller_manager_node_eviction_rate: 0.1
 k8s_master__kube_controller_manager_node_monitor_grace_period: 40s
@@ -54,6 +56,17 @@ k8s_master__kube_controller_manager_secure_port: 0
 k8s_master__kube_controller_manager_unhealthy_zone_threshold: 0.55
 k8s_master__kube_controller_manager_vlog_level: 2
 k8s_master__kube_controller_manager_restart_sec: 10
+
+k8s_master__cloud_controller_manager_allocate_node_cidrs: 'true'
+k8s_master__cloud_controller_manager_bind_address: 127.0.0.1
+k8s_master__cloud_controller_manager_cloud_provider: azure
+k8s_master__cloud_controller_manager_controller_start_interval: 0s
+k8s_master__cloud_controller_manager_node_monitor_period: 5s
+k8s_master__cloud_controller_manager_node_status_update_frequency: 5m0s
+k8s_master__cloud_controller_manager_profiling: 'false'
+k8s_master__cloud_controller_manager_secure_port: 0
+k8s_master__cloud_controller_manager_vlog_level: 2
+k8s_master__cloud_controller_manager_restart_sec: 10
 
 k8s_master__kube_scheduler_healthz_bind_address: 127.0.0.1:10251
 k8s_master__kube_scheduler_metrics_bind_address: 127.0.0.1:10247
