--- a/roles/base/defaults/main.yml
+++ b/roles/base/defaults/main.yml
@@ -19,6 +19,10 @@ base__ntp_servers:
 - server 2.rhel.pool.ntp.org iburst
 - server 3.rhel.pool.ntp.org iburst
 
+base__selinux:
+  policy: targeted
+  state: permissive
+
 base__kernel_params:
 - name: net.bridge.bridge-nf-call-iptables
   value: 1
@@ -26,6 +30,8 @@ base__kernel_params:
   value: 1
 - name: net.ipv4.ip_forward
   value: 1
+
+base__disable_firewalld: true
 
 base__reboot_polling_delay: 10
 base__reboot_polling_timeout: 300
