--- a/roles/base/tasks/os_tuned.yml
+++ b/roles/base/tasks/os_tuned.yml
@@ -43,6 +43,7 @@
       name: chronyd
       state: started
       enabled: true
+  when: base__ntp_servers
 
 - name: swap off
   block:
@@ -72,10 +73,11 @@
     when: swap_devices.stdout != ""
   when: host__is_k8s_node
 
-- name: SELinux is set to permissive
+- name: SELinux is configured
   selinux:
-    policy: targeted
-    state: permissive
+    policy: '{{ base__selinux.policy }}'
+    state: '{{ base__selinux.state }}'
+  when: base__selinux
 
 - name: br_netfilter
   block:
@@ -104,6 +106,7 @@
     name: firewalld
     state: stopped
     enabled: false
+  when: base__disable_firewalld
 
 - name: The server is rebooted
   block:
