--- a/roles/k8s_master/tasks/authorizations_for_cloud_controllers_are_configured.yml
+++ b/roles/k8s_master/tasks/authorizations_for_cloud_controllers_are_configured.yml
@@ -1,5 +1,5 @@
 - name: k8s components are ready
-  command: kubectl get componentstatuses
+  command: '{{ k8s__k8s_bin_dir }}/kubectl get componentstatuses'
   register: _componentstatuses
   until: _componentstatuses.stdout.find('Unhealthy') == -1
   retries: 5
@@ -7,7 +7,7 @@
   changed_when: false
 
 - name: ClusterRole 'system:controller:cloud-node-controller' exists
-  command: kubectl apply -f -
+  command: '{{ k8s__k8s_bin_dir }}/kubectl apply -f -'
   args:
     stdin: |
       apiVersion: rbac.authorization.k8s.io/v1
@@ -42,7 +42,7 @@
   register: _apply_result
   changed_when: '" created" in _apply_result.stdout or " configured" in _apply_result.stdout'
 - name: ClusterRoleBinding 'system:controller:cloud-node-controller' exists
-  command: kubectl apply -f -
+  command: '{{ k8s__k8s_bin_dir }}/kubectl apply -f -'
   args:
     stdin: |
       apiVersion: rbac.authorization.k8s.io/v1
@@ -61,7 +61,7 @@
   changed_when: '" created" in _apply_result.stdout or " configured" in _apply_result.stdout'
 
 - name: ClusterRole 'system:controller:pvl-controller' exists
-  command: kubectl apply -f -
+  command: '{{ k8s__k8s_bin_dir }}/kubectl apply -f -'
   args:
     stdin: |
       apiVersion: rbac.authorization.k8s.io/v1
@@ -88,7 +88,7 @@
   register: _apply_result
   changed_when: '" created" in _apply_result.stdout or " configured" in _apply_result.stdout'
 - name: ClusterRoleBinding 'system:controller:pvl-controller' exists
-  command: kubectl apply -f -
+  command: '{{ k8s__k8s_bin_dir }}/kubectl apply -f -'
   args:
     stdin: |
       apiVersion: rbac.authorization.k8s.io/v1
