--- a/roles/k8s_node/tasks/kubeconfigs_generated.yml
+++ b/roles/k8s_node/tasks/kubeconfigs_generated.yml
@@ -8,16 +8,16 @@
       path: '{{ _kubeconfig }}'
     register: _stat_result
   - name: Cluster is set in kube-proxy kubeconfig
-    command: kubectl config set-cluster {{ k8s__k8s_cluster_name }} --certificate-authority={{ k8s_node__pki_dir }}/ca.crt --embed-certs=true --server=https://{{ host__public_address }}:{{ k8s__kube_apiserver_secure_port }} --kubeconfig={{ _kubeconfig }}
+    command: '{{ k8s__k8s_bin_dir }}/kubectl config set-cluster {{ k8s__k8s_cluster_name }} --certificate-authority={{ k8s_node__pki_dir }}/ca.crt --embed-certs=true --server=https://{{ host__public_address }}:{{ k8s__kube_apiserver_secure_port }} --kubeconfig={{ _kubeconfig }}'
     when: not _stat_result.stat.exists
   - name: Client certificate is set in kube-proxy kubeconfig
-    command: kubectl config set-credentials {{ _k8s_user }} --client-certificate={{ k8s_node__pki_dir }}/kube-proxy.crt --client-key={{ k8s_node__pki_dir }}/kube-proxy.key --embed-certs=true --kubeconfig={{ _kubeconfig }}
+    command: '{{ k8s__k8s_bin_dir }}/kubectl config set-credentials {{ _k8s_user }} --client-certificate={{ k8s_node__pki_dir }}/kube-proxy.crt --client-key={{ k8s_node__pki_dir }}/kube-proxy.key --embed-certs=true --kubeconfig={{ _kubeconfig }}'
     when: not _stat_result.stat.exists
   - name: Context is set in kube-proxy kubeconfig
-    command: kubectl config set-context {{ _k8s_user }}@{{ k8s__k8s_cluster_name }} --cluster={{ k8s__k8s_cluster_name }} --user={{ _k8s_user }} --kubeconfig={{ _kubeconfig }}
+    command: '{{ k8s__k8s_bin_dir }}/kubectl config set-context {{ _k8s_user }}@{{ k8s__k8s_cluster_name }} --cluster={{ k8s__k8s_cluster_name }} --user={{ _k8s_user }} --kubeconfig={{ _kubeconfig }}'
     when: not _stat_result.stat.exists
   - name: Context is enabled in kube-proxy kubeconfig
-    command: kubectl config use-context {{ _k8s_user }}@{{ k8s__k8s_cluster_name }} --kubeconfig={{ _kubeconfig }}
+    command: '{{ k8s__k8s_bin_dir }}/kubectl config use-context {{ _k8s_user }}@{{ k8s__k8s_cluster_name }} --kubeconfig={{ _kubeconfig }}'
     when: not _stat_result.stat.exists
   - name: Only root can read kube-proxy kubeconfig
     file:
@@ -37,13 +37,13 @@
       path: '{{ _kubeconfig }}'
     register: _stat_result
   - name: Cluster is set in bootstrap kubeconfig
-    command: kubectl config set-cluster {{ k8s__k8s_cluster_name }} --certificate-authority={{ k8s_node__pki_dir }}/ca.crt --embed-certs=true --server=https://{{ host__public_address }}:{{ k8s__kube_apiserver_secure_port }} --kubeconfig={{ _kubeconfig }}
+    command: '{{ k8s__k8s_bin_dir }}/kubectl config set-cluster {{ k8s__k8s_cluster_name }} --certificate-authority={{ k8s_node__pki_dir }}/ca.crt --embed-certs=true --server=https://{{ host__public_address }}:{{ k8s__kube_apiserver_secure_port }} --kubeconfig={{ _kubeconfig }}'
     when: not _stat_result.stat.exists
   - name: Context is set in bootstrap kubeconfig
-    command: kubectl config set-context {{ _k8s_user }}@{{ k8s__k8s_cluster_name }} --cluster={{ k8s__k8s_cluster_name }} --user={{ _k8s_user }} --kubeconfig={{ _kubeconfig }}
+    command: '{{ k8s__k8s_bin_dir }}/kubectl config set-context {{ _k8s_user }}@{{ k8s__k8s_cluster_name }} --cluster={{ k8s__k8s_cluster_name }} --user={{ _k8s_user }} --kubeconfig={{ _kubeconfig }}'
     when: not _stat_result.stat.exists
   - name: Context is enabled in bootstrap kubeconfig
-    command: kubectl config use-context {{ _k8s_user }}@{{ k8s__k8s_cluster_name }} --kubeconfig={{ _kubeconfig }}
+    command: '{{ k8s__k8s_bin_dir }}/kubectl config use-context {{ _k8s_user }}@{{ k8s__k8s_cluster_name }} --kubeconfig={{ _kubeconfig }}'
     when: not _stat_result.stat.exists
   - name: Bootstrap token is loaded
     command: cat {{ k8s__local_shared_dir }}/bootstrap_token
@@ -55,7 +55,7 @@
     register: _check_result
     changed_when: false
   - name: Bootstrap token is set in bootstrap kubeconfig
-    command: kubectl config set-credentials kubelet-bootstrap --token={{ _bootstrap_token.stdout }} --kubeconfig={{ _kubeconfig }}
+    command: '{{ k8s__k8s_bin_dir }}/kubectl config set-credentials kubelet-bootstrap --token={{ _bootstrap_token.stdout }} --kubeconfig={{ _kubeconfig }}'
     when: not _bootstrap_token.stdout in _check_result.stdout
   - name: Only root can read bootstrap kubeconfig
     file:
