--- a/roles/k8s_master/defaults/main.yml
+++ b/roles/k8s_master/defaults/main.yml
@@ -6,6 +6,7 @@ k8s_master__kubectl_bin_checksum: sha1:5a336ea470a0053b1893fda89a538b6197566137
 k8s_master__kubeadm_bin_checksum: sha1:f127dccad906ee914af8b889bb60c07f402ed025
 k8s_master__cloud_controller_manager_bin_checksum: sha1:01af09fa4fe8407bf29eba9b32bd293d2434ce9d
 
+k8s__k8s_bin_dir: /usr/bin
 k8s_master__pki_dir: /etc/kubernetes/pki
 k8s_master__audit_log_dir: /var/log/kubernetes
 k8s_master__kubeconfig_dir: /etc/kubernetes
