Enable to change paths to CNI dirs.

--- a/roles/k8s_node/tasks/cni_bins_installed.yml
+++ b/roles/k8s_node/tasks/cni_bins_installed.yml
@@ -1,4 +1,4 @@
-- name: /etc/cni/net.d exists
+- name: cni dirs exist
   file:
     path: '{{ item }}'
     owner: root
@@ -6,10 +6,10 @@
     mode: 0755
     state: directory
   loop:
-  - /etc/cni/net.d
-  - /opt/cni/bin
+  - '{{ k8s_node__kubelet_cni_conf_dir }}'
+  - '{{ k8s_node__kubelet_cni_bin_dir }}'
 
-- name: cni bins
+- name: cni bins are installed
   vars:
     _cni_archive_basename: cni-amd64-{{ k8s_node__cni_version }}
     _cni_archive: '{{ _cni_archive_basename }}.tgz'
@@ -24,13 +24,13 @@
     unarchive:
       src: /tmp/{{ _cni_archive }}
       remote_src: true
-      dest: /opt/cni/bin
+      dest: '{{ k8s_node__kubelet_cni_bin_dir }}'
       owner: root
       group: root
       mode: 0755
     when: _get_url_result.changed
 
-- name: cni plugin bins
+- name: cni plugin bins are installed
   vars:
     _cni_plugins_archive_basename: cni-plugins-amd64-{{ k8s_node__cni_plugins_version }}
     _cni_plugins_archive: '{{ _cni_plugins_archive_basename }}.tgz'
@@ -45,7 +45,7 @@
     unarchive:
       src: /tmp/{{ _cni_plugins_archive }}
       remote_src: true
-      dest: /opt/cni/bin
+      dest: '{{ k8s_node__kubelet_cni_bin_dir }}'
       owner: root
       group: root
       mode: 0755
@@ -53,7 +53,7 @@
 
 - name: cni bins are owned by root
   file:
-    path: /opt/cni/bin
+    path: '{{ k8s_node__kubelet_cni_bin_dir }}'
     owner: root
     group: root
     mode: 0755
@@ -65,4 +65,4 @@
       {
         "type": "loopback"
       }
-    dest: /etc/cni/net.d/99-loopback.conf
+    dest: '{{ k8s_node__kubelet_cni_conf_dir }}/99-loopback.conf'
