--- a/roles/base/defaults/main.yml
+++ b/roles/base/defaults/main.yml
@@ -23,6 +23,8 @@ base__ntp_servers:
 - server 2.rhel.pool.ntp.org iburst
 - server 3.rhel.pool.ntp.org iburst
 
+base__turn_swap_off: true
+
 base__selinux:
   policy: targeted
   state: permissive
